--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>  
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />  
 	<title>大学地图</title>
-	<script type="text/javascript" src="http://api.map.baidu.com/api?v=3.0&ak=Ps0zrX5619HsYcmNTV7UAmUGuoWYBR9E"></script>
+	<script type="text/javascript" src="https://api.map.baidu.com/api?v=3.0&ak=Ps0zrX5619HsYcmNTV7UAmUGuoWYBR9E"></script>
 </head>  
 
 <body>
